--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
-- name: bulletinboard-ads
+- name: odatapractice
   memory: 800M
-  path: target/bulletinboard-ads.war
-  buildpack: https://github.com/cloudfoundry/java-buildpack.git#v4.6
+  path: target/odata-practice.war
+  buildpack: https://github.com/cloudfoundry/java-buildpack.git
   # buildpack: sap_java_buildpack
   # health-check-type: http
   # health-check-http-endpoint: /health
