--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 	</parent>
 	<dependencies>
 		<dependency>
@@ -177,6 +177,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>			
 			<scope>runtime</scope>
+			<version>1.4.198</version>
 		</dependency>
 		<dependency>
 		    <groupId>com.sap.cloud.db.jdbc</groupId>
