CloudFoundry odata jpa servlet initialization error fixed

--- a/manifest.yml
+++ b/manifest.yml
@@ -16,3 +16,4 @@ applications:
       # Use the non-blocking /dev/urandom instead of the default to generate random numbers.
       # When using Java community buildpack, increase startup times, especially when using Spring Boot.
       JAVA_OPTS: -Djava.security.egd=file:///dev/./urandom
+      DYN_LOG_LEVEL_KEY: DEBUG
